--- a/edm-webapp/src/main/webapp/resources/views/document-new.html
+++ b/edm-webapp/src/main/webapp/resources/views/document-new.html
@@ -1,19 +1,28 @@
 
-<form name="newDocumentForm" class="form-horizontal" role="form" >
+<form name="newDocumentForm" class="form-horizontal" role="form">
 
 	<legend>Nouveau document</legend>
 
-	<div class="form-group">
+	<div class="form-group" ng-class="{'has-error': newDocumentForm.name.$invalid, 'has-success': !newDocumentForm.name.$invalid}">
 		<label for="document.name" class="col-sm-2 control-label">Nom</label>
 		<div class="col-sm-10">
-			<input type="text" name="name" class="form-control" id="document.name" ng-model="document.name" placeholder="Mon document" ng-required="true" />
+			<input type="text" name="name" class="form-control" id="document.name" ng-model="document.name" placeholder="Mon document" ng-required="true" ng-pattern="/^[a-zA-Z0-9 éèêàù'çù+=-]*$/" />
+			<span class="help-block error" ng-show="newDocumentForm.name.$dirty && newDocumentForm.name.$error.required">
+				Il faut donner un nom à votre document si vous voulez le retrouver !
+			</span>
+			<span class="help-block error" ng-show="newDocumentForm.name.$dirty && newDocumentForm.name.$error.pattern">
+				Pas de chance ! Le nom du document que vous venez d'inscrire est bien trop complexe pour ce logiciel !
+			</span>
 		</div>
 	</div>
 
-	<div class="form-group">
+	<div class="form-group" ng-class="{'has-error': newDocumentForm.date.$invalid, 'has-success': !newDocumentForm.date.$invalid}">
 		<label for="document.date" class="col-sm-2 control-label">Date</label>
 		<div class="col-sm-10">
-			<input type="date" class="form-control" id="document.date" ng-model="document.date" placeholder="Date du document" ng-required="true" />
+			<input type="date" name="date" class="form-control" id="document.date" ng-model="document.date" placeholder="Date du document" ng-required="true" />
+			<span class="help-block error" ng-show="newDocumentForm.date.$dirty && newDocumentForm.date.$error.required">
+				Un bon document nécessite une bonne année !
+			</span>
 		</div>
 	</div>
 
@@ -37,8 +46,7 @@
 					<div class="col-sm-10">
 						<!-- The fileinput-button span is used to style the file input field as button -->
 						<span class="btn btn-success fileinput-button" ng-class="{disabled: disabled}"> <i class="glyphicon glyphicon-plus"></i> <span>Sélectionner fichier</span> <input type="file" name="files[]" ng-disabled="disabled" />
-						</span> <span>
-							<span>{{file.name}}</span> <span class="size" ng-if="file.size">({{file.size | formatFileSize}})</span>
+						</span> <span> <span>{{file.name}}</span> <span class="size" ng-if="file.size">({{file.size | formatFileSize}})</span>
 						</span>
 
 						<!-- The global file processing state -->
@@ -56,14 +64,14 @@
 				</div>
 			</div>
 		</div>
-	</div>	
-	
+	</div>
+
 </form>
 
 
-	<div class="form-group">
-		<div class="col-sm-offset-2 col-sm-10">
-			<button ng-click="back()" class="btn">Annuler</button>
-			<button ng-click="submitForm()" class="btn btn-primary" ng-disabled="newDocumentForm.$invalid || submitFormDisabled">Enregistrer</button>
-		</div>
+<div class="form-group">
+	<div class="col-sm-offset-2 col-sm-10">
+		<button ng-click="back()" class="btn">Annuler</button>
+		<button ng-click="submitForm()" class="btn btn-primary" ng-disabled="newDocumentForm.$invalid || submitFormDisabled">Enregistrer</button>
 	</div>
+</div>
