--- a/edm-webapp/src/main/webapp/resources/views/node-treeview.directory.html
+++ b/edm-webapp/src/main/webapp/resources/views/node-treeview.directory.html
@@ -10,6 +10,15 @@
 	
 		<br/>
 	
+		<form name="renameDirectoryForm" role="form">
+			<span class="col-sm-6">
+				<input type="text" class="form-control" ng-model="currentNode.name" placeholder="Nom du nouveau dossier" ng-required="true" />
+			</span>
+			<button ng-click="updateCurrentNode()" class="btn btn-success" ng-disabled="renameDirectoryForm.$invalid">Renommer</button>
+		</form>
+	
+		<br/>
+	
 		<a href="#/document/add?root={{currentNodePath}}">
 			<span class="btn btn-success fileinput-button">
 			    <i class="glyphicon glyphicon-plus"></i>
