--- a/edm-webapp/src/main/webapp/WEB-INF/views/home.html
+++ b/edm-webapp/src/main/webapp/WEB-INF/views/home.html
@@ -55,7 +55,7 @@
 		<div class="header">
 			<ul class="nav nav-pills pull-right">
 				<li th:class="${section_document}? 'active'"><a href="/">Documents</a></li>
-				<li th:class="${section_about}? 'active'"><a href="/about">A propos</a></li>
+				<li th:class="${section_about}? 'active'"><a href="https://github.com/xaviermichel/simple-edm">A propos</a></li>
 			</ul>
 			<a href="/">
 				<h3 class="text-muted" th:text="${APPLICATION_NAME}">Simple Ged</h3>
