--- a/edm-webapp/src/main/webapp/resources/views/document-new.html
+++ b/edm-webapp/src/main/webapp/resources/views/document-new.html
@@ -6,7 +6,7 @@
 	<div class="form-group" ng-class="{'has-error': newDocumentForm.name.$invalid, 'has-success': !newDocumentForm.name.$invalid}">
 		<label for="document.name" class="col-sm-2 control-label">Nom</label>
 		<div class="col-sm-10">
-			<input type="text" name="name" class="form-control" id="document.name" ng-model="document.name" placeholder="Mon document" ng-required="true" ng-pattern="/^[a-zA-Z0-9 éèêàù'çù+=-]*$/" />
+			<input type="text" name="name" class="form-control" id="document.name" ng-model="document.name" placeholder="Mon document" ng-required="true" ng-pattern="/^[a-zA-Z0-9 éèêàù'çùô+=-]*$/" />
 			<span class="help-block error" ng-show="newDocumentForm.name.$dirty && newDocumentForm.name.$error.required">
 				Il faut donner un nom à votre document si vous voulez le retrouver !
 			</span>
