--- a/edm-webapp/src/main/webapp/resources/views/node-treeview.directory.html
+++ b/edm-webapp/src/main/webapp/resources/views/node-treeview.directory.html
@@ -51,7 +51,7 @@
 					<div class="form-group" ng-class="{'has-error': renameDirectoryForm.name.$invalid, 'has-success': !renameDirectoryForm.name.$invalid}">
 						<label for="document.name" class="col-sm-2 control-label">Nom</label>
 						<div class="col-sm-10">
-							<input type="text" name="name" class="form-control" id="currentNode.name" ng-model="currentNode.name" placeholder="Nom du dossier" ng-required="true" ng-pattern="/^[a-zA-Z0-9 éèêàù'çùô+=-]*$/" /> <span class="help-block error" ng-show="renameDirectoryForm.name.$dirty && renameDirectoryForm.name.$error.required"> Il faut donner un nom à votre dossier si vous voulez le retrouver ! </span> <span class="help-block error" ng-show="renameDirectoryForm.name.$dirty && renameDirectoryForm.name.$error.pattern"> Pas de chance ! Le nom du dossier que vous venez d'inscrire est bien trop complexe pour ce logiciel ! </span>
+							<input type="text" name="name" class="form-control" id="currentNode.name" ng-model="currentNode.name" placeholder="Nom du dossier" ng-required="true" ng-pattern="/^[a-zA-Z0-9 éèêàù'çùôû.+=-]*$/" /> <span class="help-block error" ng-show="renameDirectoryForm.name.$dirty && renameDirectoryForm.name.$error.required"> Il faut donner un nom à votre dossier si vous voulez le retrouver ! </span> <span class="help-block error" ng-show="renameDirectoryForm.name.$dirty && renameDirectoryForm.name.$error.pattern"> Pas de chance ! Le nom du dossier que vous venez d'inscrire est bien trop complexe pour ce logiciel ! </span>
 						</div>
 					</div>
 				</form>
